[package]
name = "rust_mdb_load"
version = "0.0.19"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-*",
    "README.md"
]
authors = ["Rajesh Rajagopalan"]
description = """
Load generator for MongoDB Atlas using Rust 🦀
"""
repository = "https://github.com/rrajesh1979/rust_mdb_load"
documentation = "https://docs.rs/rust_mdb_load"
keywords = [
    "rust_mdb_load",
    "cli",
    "completion",
    "zsh",
]
categories = [
    "rust",
    "mongodb",
    "cli",
    "command-line-utilities"
]
license = "Apache-2.0"
readme = "README.md"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
tokio = "1.16.1"
mongodb = {version = "2.1.0"}
lipsum = "0.8"
rand = "0.8.4"
chrono = "0.4.19"
uuid = "0.8"
serde = "1.0.136"
#byte-unit = "4.0.13"
bson = {version = "2.1.0", features = ["chrono-0_4"]}
metrics = "0.18.0"